fix build for github

--- a/eu/index.html
+++ b/eu/index.html
@@ -172,10 +172,10 @@
       <h2 class="landing-subtitle light">Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu</h2>
     </div>
     <a href='http://play.google.com/store/apps/details?id=com.brozerly.app' target="_blank">
-      <img class="landing_small-badge landing_google-play-small-badge scrollreveal-buttons-small-1" src='https://play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png'/>
+      <img class="landing_small-badge landing_google-play-small-badge scrollreveal-buttons-small-1" src='//play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png'/>
     </a>
     <a href='https://geo.itunes.apple.com/app/brozerly/id1076641036?mt=8' target="_blank">
-      <img class="landing_small-badge landing_apple-small-badge scrollreveal-buttons-small-2" src='http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg'/>
+      <img class="landing_small-badge landing_apple-small-badge scrollreveal-buttons-small-2" src='//linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg'/>
     </a>
     <br/>
     <a class="waves-effect waves-light btn scrollreveal-buttons-small-3" id="landing-launch-button-small" href="https://app.brozerly.com" target="_blank">
@@ -285,10 +285,10 @@
 <div class="row landing-block landing-background-gradient">
   <h3 class="scrollreveal-block light">Deskargatu orain Brozerly</h3>
     <a href='http://play.google.com/store/apps/details?id=com.brozerly.app' target="_blank">
-      <img class="landing_big-badge landing_google-play-big-badge scrollreveal-buttons-big-1" src='https://play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png'/>
+      <img class="landing_big-badge landing_google-play-big-badge scrollreveal-buttons-big-1" src='//play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png'/>
     </a>
     <a href='https://geo.itunes.apple.com/app/brozerly/id1076641036?mt=8' target="_blank">
-      <img class="landing_big-badge landing_apple-big-badge scrollreveal-buttons-big-2" src='http://linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg'/>
+      <img class="landing_big-badge landing_apple-big-badge scrollreveal-buttons-big-2" src='//linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg'/>
     </a>
     <br/>
     <a class="waves-effect waves-light btn scrollreveal-buttons-big-3" id="landing-launch-button-big" href="https://app.brozerly.com" target="_blank">
