--- a/tos.html
+++ b/tos.html
@@ -8,13 +8,13 @@
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="es">
 
-<link rel="alternate" hreflang="es" href="http://0.0.0.0:4000/tos" />
+<link rel="alternate" hreflang="es" href="http://brozerly.github.io/tos" />
  
-<link rel="alternate" hreflang="en" href="http://0.0.0.0:4000/en/tos" />
+<link rel="alternate" hreflang="en" href="http://brozerly.github.io/en/tos" />
     
-<link rel="alternate" hreflang="eu" href="http://0.0.0.0:4000/eu/tos" />
+<link rel="alternate" hreflang="eu" href="http://brozerly.github.io/eu/tos" />
   
-<link rel="alternate" hreflang="fr" href="http://0.0.0.0:4000/fr/tos" />
+<link rel="alternate" hreflang="fr" href="http://brozerly.github.io/fr/tos" />
  
 
 <link rel="canonical" href="/tos" />
