--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="es">
 
-<link rel="alternate" hreflang="es" href="http://0.0.0.0:4000/404.html" />
+<link rel="alternate" hreflang="es" href="http://brozerly.github.io/404.html" />
  
-<link rel="alternate" hreflang="en" href="http://0.0.0.0:4000/en/404.html" />
+<link rel="alternate" hreflang="en" href="http://brozerly.github.io/en/404.html" />
     
-<link rel="alternate" hreflang="eu" href="http://0.0.0.0:4000/eu/404.html" />
+<link rel="alternate" hreflang="eu" href="http://brozerly.github.io/eu/404.html" />
   
-<link rel="alternate" hreflang="fr" href="http://0.0.0.0:4000/fr/404.html" />
+<link rel="alternate" hreflang="fr" href="http://brozerly.github.io/fr/404.html" />
  
 
 <link rel="canonical" href="/404.html" />
