--- a/faq.html
+++ b/faq.html
@@ -8,13 +8,13 @@
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="es">
 
-<link rel="alternate" hreflang="es" href="http://0.0.0.0:4000/faq" />
+<link rel="alternate" hreflang="es" href="http://brozerly.github.io/faq" />
  
-<link rel="alternate" hreflang="en" href="http://0.0.0.0:4000/en/faq" />
+<link rel="alternate" hreflang="en" href="http://brozerly.github.io/en/faq" />
     
-<link rel="alternate" hreflang="eu" href="http://0.0.0.0:4000/eu/faq" />
+<link rel="alternate" hreflang="eu" href="http://brozerly.github.io/eu/faq" />
   
-<link rel="alternate" hreflang="fr" href="http://0.0.0.0:4000/fr/faq" />
+<link rel="alternate" hreflang="fr" href="http://brozerly.github.io/fr/faq" />
  
 
 <link rel="canonical" href="/faq" />
