--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="es">
 
-<link rel="alternate" hreflang="es" href="http://0.0.0.0:4000/index" />
+<link rel="alternate" hreflang="es" href="http://brozerly.github.io/index" />
  
-<link rel="alternate" hreflang="en" href="http://0.0.0.0:4000/en/index" />
+<link rel="alternate" hreflang="en" href="http://brozerly.github.io/en/index" />
     
-<link rel="alternate" hreflang="eu" href="http://0.0.0.0:4000/eu/index" />
+<link rel="alternate" hreflang="eu" href="http://brozerly.github.io/eu/index" />
   
-<link rel="alternate" hreflang="fr" href="http://0.0.0.0:4000/fr/index" />
+<link rel="alternate" hreflang="fr" href="http://brozerly.github.io/fr/index" />
  
 
 <link rel="canonical" href="/index" />
