--- a/support.html
+++ b/support.html
@@ -8,13 +8,13 @@
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="es">
 
-<link rel="alternate" hreflang="es" href="http://0.0.0.0:4000/support" />
+<link rel="alternate" hreflang="es" href="http://brozerly.github.io/support" />
  
-<link rel="alternate" hreflang="en" href="http://0.0.0.0:4000/en/support" />
+<link rel="alternate" hreflang="en" href="http://brozerly.github.io/en/support" />
     
-<link rel="alternate" hreflang="eu" href="http://0.0.0.0:4000/eu/support" />
+<link rel="alternate" hreflang="eu" href="http://brozerly.github.io/eu/support" />
   
-<link rel="alternate" hreflang="fr" href="http://0.0.0.0:4000/fr/support" />
+<link rel="alternate" hreflang="fr" href="http://brozerly.github.io/fr/support" />
  
 
 <link rel="canonical" href="/support" />
