improvements for SEO

--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Brozerly</title>
-<link rel="shortcut icon" href="/public/favicon.ico"/>
+<link rel="shortcut icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
 
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="es">
@@ -21,7 +22,10 @@
 
 <meta property="description"
       content="La amistad es la mejor de las protecciones. -- La amistad es la mejor de las protecciones. -- La amistad es la mejor de las protecciones. -- La amistad es la mejor de las protecciones. --  crowdfunding."/>
+<meta name="description"
+      content="La amistad es la mejor de las protecciones. -- La amistad es la mejor de las protecciones. -- La amistad es la mejor de las protecciones. -- La amistad es la mejor de las protecciones. --  crowdfunding."/>
 
+<!--  -->
 
 <!-- Mobile friendly  -->
 <meta http-equiv="cleartype" content="on"/>
@@ -111,7 +115,7 @@
   <div id='brozerly-layout'>
 
     <nav class="brozerly-header">
-  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png"/>
+  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png" alt='brozerly-logo'/>
       <div class="brozerly-font brozerly-header-brand hide-on-small-only">brozerly</div></a>
     <ul class="right" id="nav-mobile">
       <li class=""><a class="white-text light" href="/index">Brozerly</a></li>
@@ -173,16 +177,16 @@
   <h6 class='thin'>
     Redirecting...
   </h6>
-  <div class="progress red lighten-4 center" style="max-width: 400px; margin: 15px auto;">
+  <div class="progress red lighten-4 center not-found-progress-bar">
     <div class="indeterminate red"></div>
   </div>
 </div>
 
     </div>
     <div id='layout-footer'>
-      <footer class="page-footer grey darken-2" id="brozerly-footer" style="margin-top: 0">
+      <footer class="page-footer grey darken-2" id="brozerly-footer">
   <div class="container">
-    <div class="row" style="margin-bottom:0px">
+    <div class="row footer-row">
       <div class="col s12 m7 l8">
         <ul id="footer-links">
           <li class="footer-link"><a class="grey-text text-lighten-3 light" href="/index">Brozerly</a></li>
@@ -243,17 +247,7 @@
 </ul>
 
     </div>
-    <!-- <div class='cookies-compilation-box' id='cookiesMessageBox'>
-  <div class='cookies-compilation-text'>
-    Las cookies nos permiten proporcionar, proteger y mejorar los servicios de Brozelry. Si continuas utilizando nuestro sitio, aceptas nuestra <a href='//www.brozerly.com/es/tos#cookies' target='_blank'> política de utilización de cookies.</a>
-  </div>
-  <div class='cookies-compilation-button'>
-    <a class='btn-floating waves-effect waves-light grey darken-2 cookies-compilation-close' id='cookiesMessageClose'>
-      <i class='material-icons'>&#xE5CD;</i>
-    </a>
-  </div>
-</div>
- -->
+
   </div>
 
 </body>
