--- a/eu/faq.html
+++ b/eu/faq.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Brozerly</title>
-<link rel="shortcut icon" href="/public/favicon.ico"/>
+<link rel="shortcut icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
 
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="eu">
@@ -21,7 +22,10 @@
 
 <meta property="description"
       content="Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. --  crowdfunding."/>
+<meta name="description"
+      content="Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. --  crowdfunding."/>
 
+<!--  -->
 
 <!-- Mobile friendly  -->
 <meta http-equiv="cleartype" content="on"/>
@@ -109,7 +113,7 @@
   <div id='brozerly-layout'>
 
     <nav class="brozerly-header">
-  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/eu/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png"/>
+  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/eu/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png" alt='brozerly-logo'/>
       <div class="brozerly-font brozerly-header-brand hide-on-small-only">brozerly</div></a>
     <ul class="right" id="nav-mobile">
       <li class=""><a class="white-text light" href="/eu/index">Brozerly</a></li>
@@ -208,7 +212,7 @@
        </div>
        <div class="collapsible-body">
          <p>
-           Nabigazio barraren barnean, lehentasunen ikonoan sakatu (errota/gurpila) eta ondoren lehentasunetan. <br> Behin orrialdean sartuta, emailean edo aplikazioa erabiltzen ari zaren gailuan (web edo mugikorra) jasotako jakinarazpenak gaitzeko edo desgaitzeko botoi ezberdinak dituzu. Hizkuntzaren ezarpenaz gain, zure Google edo Facebook-eko kontuak Brozerlyren zure kontuarekin lotzen ahalko dituzu.
+           Nabigazio barraren barnean, lehentasunen ikonoan sakatu (errota/gurpila) eta ondoren lehentasunetan. <div class='center'><img class='faq-max-width' src='/public/img/navigationbar.png' alt='navigationbar'></div> <p>Behin orrialdean sartuta, emailean edo aplikazioa erabiltzen ari zaren gailuan (web edo mugikorra) jasotako jakinarazpenak gaitzeko edo desgaitzeko botoi ezberdinak dituzu. Hizkuntzaren ezarpenaz gain, zure Google edo Facebook-eko kontuak Brozerlyren zure kontuarekin lotzen ahalko dituzu.</p>
          </p>
        </div>
      </li>
@@ -219,9 +223,9 @@
 
     </div>
     <div id='layout-footer'>
-      <footer class="page-footer grey darken-2" id="brozerly-footer" style="margin-top: 0">
+      <footer class="page-footer grey darken-2" id="brozerly-footer">
   <div class="container">
-    <div class="row" style="margin-bottom:0px">
+    <div class="row footer-row">
       <div class="col s12 m7 l8">
         <ul id="footer-links">
           <li class="footer-link"><a class="grey-text text-lighten-3 light" href="/eu/index">Brozerly</a></li>
@@ -282,17 +286,7 @@
 </ul>
 
     </div>
-    <!-- <div class='cookies-compilation-box' id='cookiesMessageBox'>
-  <div class='cookies-compilation-text'>
-    Cookiek Brozerlyren zerbitzuak ematea, babestea eta hobetzea ahalbidetzen digute. Gure webgunea erabiltzen jarraitzen baduzu, gure <a href='http://www.brozerly.com/eu/tos#cookies' target='_blank'> cookien erabilpenaren politika</a> onartzen duzu.
-  </div>
-  <div class='cookies-compilation-button'>
-    <a class='btn-floating waves-effect waves-light grey darken-2 cookies-compilation-close' id='cookiesMessageClose'>
-      <i class='material-icons'>&#xE5CD;</i>
-    </a>
-  </div>
-</div>
- -->
+
   </div>
 
 </body>
