--- a/eu/index.html
+++ b/eu/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Brozerly</title>
-<link rel="shortcut icon" href="/public/favicon.ico"/>
+<link rel="shortcut icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
 
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="eu">
@@ -21,7 +22,10 @@
 
 <meta property="description"
       content="Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. --  crowdfunding."/>
+<meta name="description"
+      content="Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. -- Laguntasuna babes onena da. --  crowdfunding."/>
 
+<!--  -->
 
 <!-- Mobile friendly  -->
 <meta http-equiv="cleartype" content="on"/>
@@ -109,7 +113,7 @@
   <div id='brozerly-layout'>
 
     <nav class="brozerly-header">
-  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/eu/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png"/>
+  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/eu/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png" alt='brozerly-logo'/>
       <div class="brozerly-font brozerly-header-brand hide-on-small-only">brozerly</div></a>
     <ul class="right" id="nav-mobile">
       <li class="active"><a class="white-text light" href="/eu/index">Brozerly</a></li>
@@ -163,8 +167,8 @@
     <div class='layout-content'>
       <!-- TITLE -->
 <div class="row landing-block landing-background-gradient">
-  <div class="col s12 hide-on-med-and-up scrollreveal-block" style="margin: 0 auto">
-    <img src='/public/lang/eu/appinphone_1.png'/>
+  <div class="col s12 hide-on-med-and-up scrollreveal-block center">
+    <img src='/public/lang/eu/appinphone_1.png' alt='Brozerly crowfunding app SOS, mugikorra Android iPhone'/>
   </div>
   <div class="col s12 m8 valing">
     <div class="scrollreveal-block">
@@ -172,24 +176,24 @@
       <h2 class="landing-subtitle light">Zure kontaktuek zure behar pertsonaletan lagun diezazuten Brozerlyk zure lagun sarean laguntza eskatzeko bidea ematen dizu</h2>
     </div>
     <a href='http://play.google.com/store/apps/details?id=com.brozerly.app' target="_blank">
-      <img class="landing_small-badge landing_google-play-small-badge scrollreveal-buttons-small-1" src='//play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png'/>
+      <img class="landing_small-badge landing_google-play-small-badge scrollreveal-buttons-small-1" src='//play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png' alt='Google Play Store'/>
     </a>
     <a href='https://geo.itunes.apple.com/app/brozerly/id1076641036?mt=8' target="_blank">
-      <img class="landing_small-badge landing_apple-small-badge scrollreveal-buttons-small-2" src='//linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg'/>
+      <img class="landing_small-badge landing_apple-small-badge scrollreveal-buttons-small-2" src='//linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg' alt='Apple App Store'/>
     </a>
     <br/>
     <a class="waves-effect waves-light btn scrollreveal-buttons-small-3" id="landing-launch-button-small" href="https://app.brozerly.com" target="_blank">
-      <i class="material-icons left" style="font-size: 30px">&#xE895;</i>
+      <i class="material-icons left index-web-app-link-icon">&#xE895;</i>
       Konektatu
     </a>
   </div>
-  <div class="col m4 hide-on-small-only scrollreveal-block" style="margin: 0 auto">
-    <img id="landingScreenshoot-0"  src='/public/lang/eu/appinphone_1.png'/></div>
+  <div class="col m4 hide-on-small-only scrollreveal-block center">
+    <img id="landingScreenshoot-0"  src='/public/lang/eu/appinphone_1.png' alt='Brozerly crowfunding app SOS, mugikorra Android iPhone'/></div>
 </div>
 
 <!-- SECTION 1: VIDEO -->
 <div class="row landing-block landing-background-grey">
-  <h4 class="scrollreveal-block"><i style="padding: 0 10px">Laguntasuna babes onena da</i></h4>
+  <h4 class="scrollreveal-block"><i class='index-video-title'>Laguntasuna babes onena da</i></h4>
   <div class="landing-video scrollreveal-video">
     <div class="video-container">
       <iframe id="video" width="800" height="480" src="https://www.youtube.com/embed/G92L_ocJPGs?rel=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
@@ -200,7 +204,7 @@
 <!-- PASS 1 -->
 <div class="row landing-block landing-line">
   <div class="col s12 hide-on-med-and-up scrollreveal-step-right">
-    <img class="landing-screenshoot"  src='/public/lang/eu/appinphone_5.png'/>
+    <img class="landing-screenshoot"  src='/public/lang/eu/appinphone_5.png' alt='Brozerly crowfunding app profila eta lagunak, mugikorra Android iPhone'/>
   </div>
   <div class="col s12 m6 scrollreveal-step-left">
     <div class="index-spacer hide-on-small-only"></div>
@@ -209,14 +213,14 @@
     <h5 class="landing-subtitle light">Zure lagunen sarea Brozerlyn osa ezazu. Gonbida itzazu zure lagunak Brozerlyra edo Brozerlyko beste kide batzuekin konektatzea eska ezazu.</h5>
   </div>
   <div class="col m6 hide-on-small-only scrollreveal-step-right">
-    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_5.png'/>
+    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_5.png' alt='Brozerly crowfunding app profila eta lagunak, mugikorra Android iPhone'/>
   </div>
 </div>
 
 <!-- PASS 2 -->
 <div class="row landing-block landing-line">
   <div class="col s12 m6 scrollreveal-step-left">
-    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_2.png'/>
+    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_2.png' alt='Brozerly crowfunding app SOS, mugikorra Android iPhone'/>
   </div>
   <div class="col s12 m6 scrollreveal-step-right">
     <div class="index-spacer hide-on-small-only"></div>
@@ -229,7 +233,7 @@
 <!-- PASS 3 -->
 <div class="row landing-block landing-line">
   <div class="col s12 hide-on-med-and-up scrollreveal-step-right">
-    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_3.png'/>
+    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_3.png' alt='Brozerly crowfunding app mezu pribatuak, mugikorra Android iPhone'/>
   </div>
   <div class="col s12 m6 scrollreveal-step-left">
     <div class="index-spacer hide-on-small-only"></div>
@@ -238,7 +242,7 @@
     <h5 class="landing-subtitle light">Zure SOSari buruzko galderak erantzuteko mezuak pribatuan edo oharrak truka itzazu zure sarearekin.</h5>
   </div>
   <div class="col m6 hide-on-small-only scrollreveal-step-right">
-    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_3.png'/>
+    <img class="landing-screenshoot" src='/public/lang/eu/appinphone_3.png' alt='Brozerly crowfunding app mezu pribatuak, mugikorra Android iPhone'/>
   </div>
 </div>
 
@@ -246,7 +250,7 @@
 <div class="row landing-block">
   <div class="scrollreveal-step">
     <div class="col s12 m6 scrollreveal-step-left">
-      <img class="landing-screenshoot" src='/public/lang/eu/appinphone_4.png'/></div>
+      <img class="landing-screenshoot" src='/public/lang/eu/appinphone_4.png' alt='Brozerly crowfunding app balantzea, mugikorra Android iPhone'/></div>
     <div class="col s12 m6 scrollreveal-step-right">
       <div class="index-spacer hide-on-small-only"></div>
       <i class="material-icons icons-large hide-on-med-and-down">&#xE8CB;</i>
@@ -277,7 +281,7 @@
     <h5 class="landing-subtitle light">
       Transakzioen segurtasuna gure lehentasuna da. Gaian munduko liderra den Stripe-kin lan egiten dugu.
     </h5>
-    <img class="landing-logo-stripe" src="/public/logos/stripe.png"/>
+    <img class="landing-logo-stripe" src="/public/logos/stripe.png" alt='Stripe'/>
   </div>
 </div>
 
@@ -285,26 +289,26 @@
 <div class="row landing-block landing-background-gradient">
   <h3 class="scrollreveal-block light">Deskargatu orain Brozerly</h3>
     <a href='http://play.google.com/store/apps/details?id=com.brozerly.app' target="_blank">
-      <img class="landing_big-badge landing_google-play-big-badge scrollreveal-buttons-big-1" src='//play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png'/>
+      <img class="landing_big-badge landing_google-play-big-badge scrollreveal-buttons-big-1" src='//play.google.com/intl/en_us/badges/images/generic/eu_badge_web_generic.png' alt='Google Play Store'/>
     </a>
     <a href='https://geo.itunes.apple.com/app/brozerly/id1076641036?mt=8' target="_blank">
-      <img class="landing_big-badge landing_apple-big-badge scrollreveal-buttons-big-2" src='//linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg'/>
+      <img class="landing_big-badge landing_apple-big-badge scrollreveal-buttons-big-2" src='//linkmaker.itunes.apple.com/images/badges/en-us/badge_appstore-lrg.svg' alt='Apple App Store'/>
     </a>
     <br/>
     <a class="waves-effect waves-light btn scrollreveal-buttons-big-3" id="landing-launch-button-big" href="https://app.brozerly.com" target="_blank">
-      <i class="material-icons left" style="font-size: 30px">&#xE895;</i>
+      <i class="material-icons left index-web-app-link-icon">&#xE895;</i>
       Konektatu
     </a>
 </div>
 
 <!-- SPONSORS -->
 <div class="row landing-block">
-  <h6 style="color: grey"><b>LAGUNTZAILEAK</b></h6>
+  <h6 class="grey-text"><b>LAGUNTZAILEAK</b></h6>
   <div class="scrollreveal-block">
-    <img class="landing-logo-sponsor" src="/public/logos/bpi_france.png"/>
-    <img class="landing-logo-sponsor" src="/public/logos/french_tech.png"/>
-    <img class="landing-logo-sponsor" src="/public/logos/conseil_general_64.jpg"/>
-    <img class="landing-logo-sponsor" src="/public/logos/region_aquitaine.png"/>
+    <img class="landing-logo-sponsor" src="/public/logos/bpi_france.png" alt='Sponsors - BPI France'/>
+    <img class="landing-logo-sponsor" src="/public/logos/french_tech.png" alt='Sponsors - French Tech'/>
+    <img class="landing-logo-sponsor" src="/public/logos/conseil_general_64.jpg" alt='Sponsors - Conseil General 64'/>
+    <img class="landing-logo-sponsor" src="/public/logos/region_aquitaine.png" alt='Sponsors - Region Aquitaine'/>
   </div>
 </div>
 
@@ -344,9 +348,9 @@
 
     </div>
     <div id='layout-footer'>
-      <footer class="page-footer grey darken-2" id="brozerly-footer" style="margin-top: 0">
+      <footer class="page-footer grey darken-2" id="brozerly-footer">
   <div class="container">
-    <div class="row" style="margin-bottom:0px">
+    <div class="row footer-row">
       <div class="col s12 m7 l8">
         <ul id="footer-links">
           <li class="footer-link"><a class="grey-text text-lighten-3 light" href="/eu/index">Brozerly</a></li>
@@ -407,17 +411,7 @@
 </ul>
 
     </div>
-    <!-- <div class='cookies-compilation-box' id='cookiesMessageBox'>
-  <div class='cookies-compilation-text'>
-    Cookiek Brozerlyren zerbitzuak ematea, babestea eta hobetzea ahalbidetzen digute. Gure webgunea erabiltzen jarraitzen baduzu, gure <a href='http://www.brozerly.com/eu/tos#cookies' target='_blank'> cookien erabilpenaren politika</a> onartzen duzu.
-  </div>
-  <div class='cookies-compilation-button'>
-    <a class='btn-floating waves-effect waves-light grey darken-2 cookies-compilation-close' id='cookiesMessageClose'>
-      <i class='material-icons'>&#xE5CD;</i>
-    </a>
-  </div>
-</div>
- -->
+
   </div>
 
 </body>
