--- a/fr/tos.html
+++ b/fr/tos.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Brozerly</title>
-<link rel="shortcut icon" href="/public/favicon.ico"/>
+<link rel="shortcut icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
 
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="fr">
@@ -21,7 +22,10 @@
 
 <meta property="description"
       content="L'amitié est la meilleure des protections. -- L'amitié est la meilleure des protections. -- L'amitié est la meilleure des protections. -- L'amitié est la meilleure des protections. --  crowdfunding."/>
+<meta name="description"
+      content="L'amitié est la meilleure des protections. -- L'amitié est la meilleure des protections. -- L'amitié est la meilleure des protections. -- L'amitié est la meilleure des protections. --  crowdfunding."/>
 
+<!--  -->
 
 <!-- Mobile friendly  -->
 <meta http-equiv="cleartype" content="on"/>
@@ -109,7 +113,7 @@
   <div id='brozerly-layout'>
 
     <nav class="brozerly-header">
-  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/fr/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png"/>
+  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/fr/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png" alt='brozerly-logo'/>
       <div class="brozerly-font brozerly-header-brand hide-on-small-only">brozerly</div></a>
     <ul class="right" id="nav-mobile">
       <li class=""><a class="white-text light" href="/fr/index">Brozerly</a></li>
@@ -336,9 +340,9 @@ Le détail des pièces acceptées se trouve via la section &quot;Balance&quot; (
 
     </div>
     <div id='layout-footer'>
-      <footer class="page-footer grey darken-2" id="brozerly-footer" style="margin-top: 0">
+      <footer class="page-footer grey darken-2" id="brozerly-footer">
   <div class="container">
-    <div class="row" style="margin-bottom:0px">
+    <div class="row footer-row">
       <div class="col s12 m7 l8">
         <ul id="footer-links">
           <li class="footer-link"><a class="grey-text text-lighten-3 light" href="/fr/index">Brozerly</a></li>
@@ -399,17 +403,7 @@ Le détail des pièces acceptées se trouve via la section &quot;Balance&quot; (
 </ul>
 
     </div>
-    <!-- <div class='cookies-compilation-box' id='cookiesMessageBox'>
-  <div class='cookies-compilation-text'>
-    Les cookies nous permettent de fournir, protéger et améliorer les services de Brozerly. En continuant à utiliser notre site, vous acceptez notre <a href='//www.brozerly.com/fr/tos#cookies' target='_blank'>politique d'utilisation de cookies</a>.
-  </div>
-  <div class='cookies-compilation-button'>
-    <a class='btn-floating waves-effect waves-light grey darken-2 cookies-compilation-close' id='cookiesMessageClose'>
-      <i class='material-icons'>&#xE5CD;</i>
-    </a>
-  </div>
-</div>
- -->
+
   </div>
 
 </body>
