--- a/en/faq.html
+++ b/en/faq.html
@@ -3,7 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>Brozerly</title>
-<link rel="shortcut icon" href="/public/favicon.ico"/>
+<link rel="shortcut icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="http://brozerly.github.io/public/favicon.ico"/>
 
 <!-- SEO -->
 <meta http-equiv="Content-Language" content="en">
@@ -21,7 +22,10 @@
 
 <meta property="description"
       content="Friendship is your best protection. -- Friendship is your best protection. -- Friendship is your best protection. -- Friendship is your best protection. --  crowdfunding."/>
+<meta name="description"
+      content="Friendship is your best protection. -- Friendship is your best protection. -- Friendship is your best protection. -- Friendship is your best protection. --  crowdfunding."/>
 
+<!--  -->
 
 <!-- Mobile friendly  -->
 <meta http-equiv="cleartype" content="on"/>
@@ -109,7 +113,7 @@
   <div id='brozerly-layout'>
 
     <nav class="brozerly-header">
-  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/en/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png"/>
+  <div class="nav-wrapper"><a class="brozerly-header-brand" href="/en/index"><img id="brozerly-header-logo" src="/public/brozerly-icon.png" alt='brozerly-logo'/>
       <div class="brozerly-font brozerly-header-brand hide-on-small-only">brozerly</div></a>
     <ul class="right" id="nav-mobile">
       <li class=""><a class="white-text light" href="/en/index">Brozerly</a></li>
@@ -208,7 +212,7 @@
        </div>
        <div class="collapsible-body">
          <p>
-           Within the navigation bar click on the settings icon (the wheel) and then on settings. <div style='text-align:center;'><img style='max-width:100%;' src='/public/img/navigationbar.png'></div> <p> Once you access the settings page you have several buttons available to activate or deactivate notifications by email or in the device from which you are using the application (mobile or web). In addition to language settings, you can also link your Google or Facebook accounts with your Brozerly account.</p>
+           Within the navigation bar click on the settings icon (the wheel) and then on settings. <div class='center'> <img class='faq-max-width' src='/public/img/navigationbar.png' alt='navigationbar'></div> <p> Once you access the settings page you have several buttons available to activate or deactivate notifications by email or in the device from which you are using the application (mobile or web). In addition to language settings, you can also link your Google or Facebook accounts with your Brozerly account.</p>
          </p>
        </div>
      </li>
@@ -219,9 +223,9 @@
 
     </div>
     <div id='layout-footer'>
-      <footer class="page-footer grey darken-2" id="brozerly-footer" style="margin-top: 0">
+      <footer class="page-footer grey darken-2" id="brozerly-footer">
   <div class="container">
-    <div class="row" style="margin-bottom:0px">
+    <div class="row footer-row">
       <div class="col s12 m7 l8">
         <ul id="footer-links">
           <li class="footer-link"><a class="grey-text text-lighten-3 light" href="/en/index">Brozerly</a></li>
@@ -282,17 +286,7 @@
 </ul>
 
     </div>
-    <!-- <div class='cookies-compilation-box' id='cookiesMessageBox'>
-  <div class='cookies-compilation-text'>
-    Cookies help us provide, protect and improve Brozerly services. By continuing to use our site, you agree to our cookie policy. <a href='//www.brozerly.com/en/tos#cookies' target='_blank'> our cookie policy</a>
-  </div>
-  <div class='cookies-compilation-button'>
-    <a class='btn-floating waves-effect waves-light grey darken-2 cookies-compilation-close' id='cookiesMessageClose'>
-      <i class='material-icons'>&#xE5CD;</i>
-    </a>
-  </div>
-</div>
- -->
+
   </div>
 
 </body>
